# Lisbon_Rent_Insight_

./: .gitattributes  .gitignore  README.md  duckdb_test.ipynb  listings.db  main.py  pyproject.toml  scraper_test.ipynb  scraper_test_check_success.ipynb  tests.py  urls.txt  webshare.py
db/: init.py
dbt/: dbt_project.yml  profiles.yml
dbt/models/: sources.yml  stg_cleaned_listings.sql
dbt/models/mart/: mart_listings.sql
dbt/models/staging/: stg_cleaned_listings.sql
dbt/seeds/: freguesia_map.csv
evidence/: .gitignore
evidence/pages/: index.md  page1.md
evidence/sources/motherduck/: cleaned_listings.sql  connection.yaml  mart_listings.sql  raw_listings.sql
evidence/static/: freguesias.geojson
scrape/: constants.py  utils.py
scraper/: browser.py  constants.py  parser.py  urls.py
src/scraper/: browser.py  parser.py  urls.py
test/fixtures/: capture_fixtures.py  lisboa_ajuda_page1.html
tests/: conftest.py  test_parser.py
tests/fixtures/: lisboa_ajuda_pagina2.html
