[project]
name = "idealista-scrape"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bs4>=0.0.2",
    "duckdb>=1.5.2",
    "python-dotenv>=1.2.2",
    "undetected-chromedriver>=3.5.5",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "jupyterlab>=4.5.6",
    "ruff>=0.15.11",
]
